minor alignment fixes

--- a/browserAction/style.css
+++ b/browserAction/style.css
@@ -79,7 +79,7 @@ body {
     position: absolute;
     width: 180px;
     height: 1px;
-    left: 90px;
+    left: 87px;
     top: 166px;
 }
 
